# rust_password_manager

./: Cargo.toml  README.md
src/: main.rs  network.rs  utils.rs
web_files/: backup.php  test.php
